[package]
name = "opengl-rust"
version = "0.1.0"
authors = ["Giacomo Alberini <giacomoalbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = "0.14.0"
sdl2 = "0.32.0"
gl = { path = "lib/gl" }

[features]
gl_debug = ["gl/debug"]
