[package]
name = "cruze"
version = "0.1.0"
authors = ["Giacomo <giacomoalbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
lyon = "0.14.0"
sdl2 = "0.32.0"
gl = { path = "../gl" }

[features]
gl_debug = ["gl/debug"]
