[package]
name = "cruze"
version = "0.1.0"
authors = ["Giacomo <giacomoalbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
lyon = { path = "../../../lyon" }
gl = { path = "../gl" }
glutin = "0.22.0-alpha1"

[features]
gl_debug = ["gl/debug"]
