[package]
name = "cruze"
version = "0.1.0"
authors = ["Giacomo <giacomoalbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
rusttype="0.7.7"
cgmath = "0.17.0"
lyon = "0.14.1"
glyph_brush = "0.5.3"
gl = { path = "../gl" }
glutin = "0.22.0-alpha1"

[features]
gl_debug = ["gl/debug"]
